app/tech-shop/microservice/k8s/overlays/prod/patches/bff-admin-redirect.yaml
# Override redirect URI cho bff-admin (prod)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-admin
  namespace: techshop
spec:
  template:
    spec:
      containers:
        - name: bff-admin
