app/tech-shop/microservice/k8s/overlays/prod/patches/bff-user-redirect.yaml
# Override redirect URI cho bff-user (prod)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-user
  namespace: techshop
spec:
  template:
    spec:
      containers:
        - name: bff-user
